--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,9 +18,9 @@ jobs:
           key: ${{ secrets.REMOTE_PRIVATE_KEY }} # ec2 instance pem key
           port: ${{ secrets.REMOTE_SSH_PORT }} # 접속포트
           script: | # 실행할 스크립트
-            cd /home/ubuntu/Server-V2
-            git pull origin dev
-            pm2 kill
-            npm i --force
-            npm run build
-            pm2 start dist/main.js
+            cd /home/ubuntu/workmotion
+            git pull
+            sudo /home/ubuntu/tomcat/apache-tomcat-9.0.86/bin/shutdown.sh
+            mvn clean package
+            mv ./target/app-1.0.0-BUILD-SNAPSHOT.war /home/ubuntu/tomcat/apache-tomcat-9.0.86/webapps/ROOT.war
+            sudo /home/ubuntu/tomcat/apache-tomcat-9.0.86/bin/startup.sh
